fix layout overflow

--- a/styles/pages/settle.css
+++ b/styles/pages/settle.css
@@ -178,5 +178,5 @@
 /*}*/
 
 .settle_split .stack {
-  gap: 0;
+  gap: 3px;
 }
